# TeaPacketModular

./: .gitignore  BorrowedFixedArray_8hpp.html  BorrowedFixedArray_8hpp.js  BorrowedFixedArray_8hpp_source.html  CMakeLists.txt  ClassDefUtils_8hpp.html  ClassDefUtils_8hpp.js  ClassDefUtils_8hpp_source.html  Color_8hpp.html  Color_8hpp.js  Color_8hpp_source.html  Core_8hpp.html  Core_8hpp.js  Core_8hpp_source.html  DisplayParameters_8hpp.html  DisplayParameters_8hpp.js  DisplayParameters_8hpp_source.html  Display_8hpp.html  Display_8hpp.js  Display_8hpp_source.html  EndianSwapping_8hpp.html  EndianSwapping_8hpp.js  EndianSwapping_8hpp_source.html  Graphics_8hpp.html  Graphics_8hpp.js  Graphics_8hpp_source.html  Logging_8hpp.html  Logging_8hpp.js  Logging_8hpp_source.html  MeshParameters_8hpp.html  MeshParameters_8hpp.js  MeshParameters_8hpp_source.html  Mesh_8hpp.html  Mesh_8hpp.js  Mesh_8hpp_source.html  PrimitiveTypes_8hpp.html  PrimitiveTypes_8hpp.js  PrimitiveTypes_8hpp_source.html  README.md  ReadAsset_8hpp.html  (+261 more)
.github/workflows/: doxygen-gh-pages.yml
CMakeCommons/: CommonEnd.CMake  CommonFunctions.CMake  CommonTest.CMake  InterfaceCommon.CMake
Doxygen/: Doxyfile
Doxygen/Documentation/html/: _borrowed_fixed_array_8hpp.js  _class_def_utils_8hpp.js  _color_8hpp.js  _display_8cpp.html  _display_8hpp.html  _display_8hpp.js  _display_8hpp_source.html  _display_parameters_8hpp.js  _extensions_2_modules_2_window_2_windows_2build_2windows_2_c_make_files_23_831_86_2_compiler_id_04876b5a8fce57dd685a2c43bf9ecf5c.html  _extensions_2_modules_2_window_2_windows_2build_2windows_2_c_make_files_23_831_86_2_compiler_id_04876b5a8fce57dd685a2c43bf9ecf5c.js  _extensions_2_modules_2_window_2_windows_2build_2windows_2_c_make_files_23_831_86_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _extensions_2_modules_2_window_2_windows_2build_2windows_2_c_make_files_23_831_86_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  _graphics_8cpp.html  _graphics_8hpp.html  _graphics_8hpp.js  _graphics_8hpp_source.html  _logging_8hpp.js  _mesh_8hpp.js  _mesh_parameters_8hpp.js  (+266 more)
Extensions/STBImageLoader/: CMakeLists.txt
Extensions/STBImageLoader/include/TeaPacket/Extensions/STBImageLoader/: ImageLoader.hpp
Extensions/STBImageLoader/source/: ImageLoader.cpp
Extensions/TextureUtils/: CMakeLists.txt
Extensions/TextureUtils/include/TeaPacket/TextureUtils/: TextureUtils.hpp
Extensions/TextureUtils/source/: TextureUtils.cpp
Generators/EnumMapGen/: main.py
Modules/Core/Interface/: CMakeLists.txt
Modules/Core/Interface/include/TeaPacket/: TeaPacket.hpp
Modules/Core/Interface/source/: TeaPacket.cpp
Modules/Graphics/GX2/: CMakeLists.txt
Modules/Graphics/GX2/generators/: TextureFilter.gmap  TextureFormat.gmap  TextureWrap.gmap
Modules/Graphics/GX2/include/TeaPacket/Graphics/: PlatformMesh.hpp  PlatformShader.hpp  PlatformTexture.hpp  PlatformUniformBuffer.hpp  PlatformViewport.hpp
Modules/Graphics/GX2/source/: Graphics.cpp  Mesh.cpp  Shader.cpp  ShaderAttributeFormat.hpp  ShaderVariable.cpp  Texture.cpp  UniformBuffer.cpp  Viewport.cpp
Modules/Graphics/GX2/source/CafeGLSL/: CafeGLSLCompiler.hpp
Modules/Graphics/GX2/source/GraphicsHeap/: MEM2Resource.hpp
Modules/Window/Windows/: CMakeLists.txt
Modules/Window/Windows/include/TeaPacket/Window/: PlatformWindow.hpp
Modules/Window/Windows/source/: Window.cpp
Subtools/AssetMixer/: run.py
TestPrograms/: CMakeLists.txt
TestPrograms/AssetsTest/: CMakeLists.txt  configure.py  main.cpp
TestPrograms/GraphicsTest/: CMakeLists.txt  configure.py  main.cpp
TestPrograms/GraphicsTest/assets/: color.frag  color.vert  test.frag  test.vert  textured.frag  textured.vert
TestPrograms/GraphicsTest2/: CMakeLists.txt  main.cpp
TestPrograms/InputTest/: main.cpp
TestPrograms/MemCheck/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt
Tests/Graphics/: CMakeLists.txt
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_a.js  enumvalues_b.js  files_0.js  files_1.js  (+30 more)
(+304 files in other folders)
